--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 <body>
 <div class="container">
 
-  <div class="main_container">
 
-    <img class="main_photo "src="images/image-equilibrium.jpg" alt="Equilibrium">
+<div class="main_container">
+    <!--<img class="main_photo "src="images/image-equilibrium.jpg" alt="Equilibrium">-->
+  <div class="photo_blend">
+
+  </div>
 <div class="main_text">
     <h3>Equilibrium #3429</h3>
     <p>Our Equilibrium collection promotes balance and calm.</p>
